cluster/apps/wordpress/simone/ingressroutes.yaml
# wp-simone-local-ingressroute
# wp-simone-http-ingressroute
# wp-simone-https-ingressroute
# wp-simone-middleware-headers

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wp-simone-local-ingressroute
  namespace: wp-simone
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`simone.${SECRET_DOMAIN_LOCAL_02}`)
      kind: Rule
      services:
        - name: wp-simone-wp-simone-wordpress
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wp-simone-http-ingressroute
  namespace: wp-simone
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`simone.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        - name: https-redirect-scheme-middleware
          namespace: traefik
      services:
        - name: wp-simone-wp-simone-wordpress
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wp-simone-https-ingressroute
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`simone.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        # - name: authelia-middleware
        #   namespace: authentication
        - name: wp-simone-middleware-headers
          namespace: wp-simone
      services:
        - name: wp-simone-wp-simone-wordpress
          namespace: wp-simone
          port: 80
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: wp-simone-middleware-headers
  namespace: wp-simone
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    frameDeny: true
    sslRedirect: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 315360000
    # stsSeconds: 63072000
    contentSecurityPolicy: |
      default-src 'none';form-action 'none';frame-ancestors 'none';base-uri 'none'
    accessControlAllowMethods:
      - "GET"
      - "POST"
    accessControlAllowOriginList:
      - "https://simone.${SECRET_DIGITALOCEAN_DOMAIN_02}"
    accessControlMaxAge: 100
    addVaryHeader: true
    referrerPolicy: "same-origin"
    customFrameOptionsValue: SAMEORIGIN
